# advent_of_code

./: README.md  day1-chronal_calibration.py  day1a-chronal_calibration.py  day2-inventory_management.py  day3-fabric_slicing.py  day4-repose_record.py  file_ops.py  pyproject.toml
2018/: README.md  day1-chronal_calibration.py  day2-inventory_management.py  day3-fabric_slicing.py
2019/: day1-rocket_equation.py  day2-intcode.py  day3-crossed_wires-2d_array.py  day3-crossed_wires-segments.py  day3-crossed_wires.py  day3-input.txt  day5-TEST.py  day6-test_input.txt  day6-universal_orbit_map.py  file_ops.py  output.txt
advent_of_code/: file_ops.py  setup.py
advent_of_code/advent2018/: README.md  day1-chronal_calibration.py  day2-inventory_management.py  day3-fabric_slicing.py  day4-repose_record.py  day4test.txt  file_ops.py
advent_of_code/advent2019/: day1-rocket_equation.py  day2-intcode.py  day3-crossed_wires-2d_array.py  day3-crossed_wires-segments.py  day4-password.py  day5-TEST.py  day6-universal_orbit_map.py
advent_of_code/advent2020/: README.md  day10_adapter_array.py  day1_report_repair.py  day1_test_input.txt  day2_password_philosophy.py  day3_toboggan_trajectory.py  day4_passport_processing.py  day5_binary_boarding.py  day6_custom_customs.py  day7_handy_haversacks.py  day8_handheld_halting.py  day9_encoding_error.py  text.txt
advent_of_code/advent2021/: day1_sonar_sweep.py  day2_dive.py
advent_of_code/advent2023/: day1.py  day2.py  day3.py  day4.py
advent_of_code/advent2024/: day1.py  day2.py  day3.py  (+3 more)
requirements/: requirements.in  requirements.txt
(+13 files in other folders)
