[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Advent of Code 2018 (https://adventofcode.com/) solutions in Python"
authors = ["Kurt Klein <fuji.film.fan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.17.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
