[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Advent of Code (https://adventofcode.com/) solutions in Python"
authors = ["Kurt Klein <fuji.film.fan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.17.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
